parser.output
Terminals unused in grammar

   CASE
   DEFAULT


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: $@1 declarations stmt_block

    3 declarations: declarations declaration
    4             | /* empty */

    5 $@2: /* empty */

    6 declaration: $@2 idlist ':' type ';'

    7 type: INT
    8     | FLOAT

    9 idlist: idlist ',' ID
   10       | ID

   11 stmt: assignment_stmt
   12     | input_stmt
   13     | output_stmt
   14     | if_stmt
   15     | while_stmt
   16     | stmt_block

   17 assignment_stmt: ID '=' expression ';'

   18 input_stmt: INPUT '(' ID ')' ';'

   19 output_stmt: OUTPUT '(' expression ')' ';'

   20 $@3: /* empty */

   21 $@4: /* empty */

   22 if_stmt: IF create_label '(' boolexpr ')' $@3 stmt $@4 ELSE stmt

   23 $@5: /* empty */

   24 $@6: /* empty */

   25 while_stmt: WHILE create_label $@5 '(' boolexpr ')' $@6 stmt

   26 stmt_block: '{' stmtlist '}'

   27 stmtlist: stmtlist stmt
   28         | /* empty */

   29 boolexpr: boolexpr OR boolterm
   30         | boolterm

   31 boolterm: boolterm AND boolfactor
   32         | boolfactor

   33 boolfactor: NOT '(' boolexpr ')'
   34           | expression RELOP expression

   35 expression: expression ADDOP term
   36           | term

   37 term: term MULOP factor
   38     | factor

   39 factor: '(' expression ')'
   40       | CAST '(' expression ')'
   41       | ID
   42       | NUM

   43 create_label: /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 19 22 25 33 39 40
')' (41) 18 19 22 25 33 39 40
',' (44) 9
':' (58) 6
';' (59) 6 17 18 19
'=' (61) 17
'{' (123) 26
'}' (125) 26
error (256)
CASE (258)
DEFAULT (259)
ELSE (260) 22
FLOAT (261) 8
IF (262) 22
INPUT (263) 18
INT (264) 7
OUTPUT (265) 19
WHILE (266) 25
RELOP (267) 34
ADDOP (268) 35
MULOP (269) 37
OR (270) 29
AND (271) 31
NOT (272) 33
CAST (273) 40
ID (274) 9 10 17 18 41
NUM (275) 42


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
create_label (30)
    on left: 43, on right: 22 25
boolexpr (31)
    on left: 29 30, on right: 22 25 29 33
boolterm (32)
    on left: 31 32, on right: 29 30 31
boolfactor (33)
    on left: 33 34, on right: 31 32
factor (34)
    on left: 39 40 41 42, on right: 37 38
term (35)
    on left: 37 38, on right: 35 36 37
expression (36)
    on left: 35 36, on right: 17 19 34 35 39 40
type (37)
    on left: 7 8, on right: 6
program (38)
    on left: 2, on right: 0
$@1 (39)
    on left: 1, on right: 2
declarations (40)
    on left: 3 4, on right: 2 3
declaration (41)
    on left: 6, on right: 3
$@2 (42)
    on left: 5, on right: 6
idlist (43)
    on left: 9 10, on right: 6 9
stmt (44)
    on left: 11 12 13 14 15 16, on right: 22 25 27
assignment_stmt (45)
    on left: 17, on right: 11
input_stmt (46)
    on left: 18, on right: 12
output_stmt (47)
    on left: 19, on right: 13
if_stmt (48)
    on left: 22, on right: 14
$@3 (49)
    on left: 20, on right: 22
$@4 (50)
    on left: 21, on right: 22
while_stmt (51)
    on left: 25, on right: 15
$@5 (52)
    on left: 23, on right: 25
$@6 (53)
    on left: 24, on right: 25
stmt_block (54)
    on left: 26, on right: 2 16
stmtlist (55)
    on left: 27 28, on right: 26 27


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 . declarations stmt_block

    $default  reduce using rule 4 (declarations)

    declarations  go to state 4


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 program: $@1 declarations . stmt_block
    3 declarations: declarations . declaration

    '{'  shift, and go to state 5

    $default  reduce using rule 5 ($@2)

    declaration  go to state 6
    $@2          go to state 7
    stmt_block   go to state 8


State 5

   26 stmt_block: '{' . stmtlist '}'

    $default  reduce using rule 28 (stmtlist)

    stmtlist  go to state 9


State 6

    3 declarations: declarations declaration .

    $default  reduce using rule 3 (declarations)


State 7

    6 declaration: $@2 . idlist ':' type ';'

    ID  shift, and go to state 10

    idlist  go to state 11


State 8

    2 program: $@1 declarations stmt_block .

    $default  reduce using rule 2 (program)


State 9

   26 stmt_block: '{' stmtlist . '}'
   27 stmtlist: stmtlist . stmt

    IF      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    WHILE   shift, and go to state 15
    ID      shift, and go to state 16
    '{'     shift, and go to state 5
    '}'     shift, and go to state 17

    stmt             go to state 18
    assignment_stmt  go to state 19
    input_stmt       go to state 20
    output_stmt      go to state 21
    if_stmt          go to state 22
    while_stmt       go to state 23
    stmt_block       go to state 24


State 10

   10 idlist: ID .

    $default  reduce using rule 10 (idlist)


State 11

    6 declaration: $@2 idlist . ':' type ';'
    9 idlist: idlist . ',' ID

    ':'  shift, and go to state 25
    ','  shift, and go to state 26


State 12

   22 if_stmt: IF . create_label '(' boolexpr ')' $@3 stmt $@4 ELSE stmt

    $default  reduce using rule 43 (create_label)

    create_label  go to state 27


State 13

   18 input_stmt: INPUT . '(' ID ')' ';'

    '('  shift, and go to state 28


State 14

   19 output_stmt: OUTPUT . '(' expression ')' ';'

    '('  shift, and go to state 29


State 15

   25 while_stmt: WHILE . create_label $@5 '(' boolexpr ')' $@6 stmt

    $default  reduce using rule 43 (create_label)

    create_label  go to state 30


State 16

   17 assignment_stmt: ID . '=' expression ';'

    '='  shift, and go to state 31


State 17

   26 stmt_block: '{' stmtlist '}' .

    $default  reduce using rule 26 (stmt_block)


State 18

   27 stmtlist: stmtlist stmt .

    $default  reduce using rule 27 (stmtlist)


State 19

   11 stmt: assignment_stmt .

    $default  reduce using rule 11 (stmt)


State 20

   12 stmt: input_stmt .

    $default  reduce using rule 12 (stmt)


State 21

   13 stmt: output_stmt .

    $default  reduce using rule 13 (stmt)


State 22

   14 stmt: if_stmt .

    $default  reduce using rule 14 (stmt)


State 23

   15 stmt: while_stmt .

    $default  reduce using rule 15 (stmt)


State 24

   16 stmt: stmt_block .

    $default  reduce using rule 16 (stmt)


State 25

    6 declaration: $@2 idlist ':' . type ';'

    FLOAT  shift, and go to state 32
    INT    shift, and go to state 33

    type  go to state 34


State 26

    9 idlist: idlist ',' . ID

    ID  shift, and go to state 35


State 27

   22 if_stmt: IF create_label . '(' boolexpr ')' $@3 stmt $@4 ELSE stmt

    '('  shift, and go to state 36


State 28

   18 input_stmt: INPUT '(' . ID ')' ';'

    ID  shift, and go to state 37


State 29

   19 output_stmt: OUTPUT '(' . expression ')' ';'

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor      go to state 42
    term        go to state 43
    expression  go to state 44


State 30

   25 while_stmt: WHILE create_label . $@5 '(' boolexpr ')' $@6 stmt

    $default  reduce using rule 23 ($@5)

    $@5  go to state 45


State 31

   17 assignment_stmt: ID '=' . expression ';'

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor      go to state 42
    term        go to state 43
    expression  go to state 46


State 32

    8 type: FLOAT .

    $default  reduce using rule 8 (type)


State 33

    7 type: INT .

    $default  reduce using rule 7 (type)


State 34

    6 declaration: $@2 idlist ':' type . ';'

    ';'  shift, and go to state 47


State 35

    9 idlist: idlist ',' ID .

    $default  reduce using rule 9 (idlist)


State 36

   22 if_stmt: IF create_label '(' . boolexpr ')' $@3 stmt $@4 ELSE stmt

    NOT   shift, and go to state 48
    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    boolexpr    go to state 49
    boolterm    go to state 50
    boolfactor  go to state 51
    factor      go to state 42
    term        go to state 43
    expression  go to state 52


State 37

   18 input_stmt: INPUT '(' ID . ')' ';'

    ')'  shift, and go to state 53


State 38

   40 factor: CAST . '(' expression ')'

    '('  shift, and go to state 54


State 39

   41 factor: ID .

    $default  reduce using rule 41 (factor)


State 40

   42 factor: NUM .

    $default  reduce using rule 42 (factor)


State 41

   39 factor: '(' . expression ')'

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor      go to state 42
    term        go to state 43
    expression  go to state 55


State 42

   38 term: factor .

    $default  reduce using rule 38 (term)


State 43

   36 expression: term .
   37 term: term . MULOP factor

    MULOP  shift, and go to state 56

    $default  reduce using rule 36 (expression)


State 44

   19 output_stmt: OUTPUT '(' expression . ')' ';'
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 57
    ')'    shift, and go to state 58


State 45

   25 while_stmt: WHILE create_label $@5 . '(' boolexpr ')' $@6 stmt

    '('  shift, and go to state 59


State 46

   17 assignment_stmt: ID '=' expression . ';'
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 57
    ';'    shift, and go to state 60


State 47

    6 declaration: $@2 idlist ':' type ';' .

    $default  reduce using rule 6 (declaration)


State 48

   33 boolfactor: NOT . '(' boolexpr ')'

    '('  shift, and go to state 61


State 49

   22 if_stmt: IF create_label '(' boolexpr . ')' $@3 stmt $@4 ELSE stmt
   29 boolexpr: boolexpr . OR boolterm

    OR   shift, and go to state 62
    ')'  shift, and go to state 63


State 50

   30 boolexpr: boolterm .
   31 boolterm: boolterm . AND boolfactor

    AND  shift, and go to state 64

    $default  reduce using rule 30 (boolexpr)


State 51

   32 boolterm: boolfactor .

    $default  reduce using rule 32 (boolterm)


State 52

   34 boolfactor: expression . RELOP expression
   35 expression: expression . ADDOP term

    RELOP  shift, and go to state 65
    ADDOP  shift, and go to state 57


State 53

   18 input_stmt: INPUT '(' ID ')' . ';'

    ';'  shift, and go to state 66


State 54

   40 factor: CAST '(' . expression ')'

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor      go to state 42
    term        go to state 43
    expression  go to state 67


State 55

   35 expression: expression . ADDOP term
   39 factor: '(' expression . ')'

    ADDOP  shift, and go to state 57
    ')'    shift, and go to state 68


State 56

   37 term: term MULOP . factor

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor  go to state 69


State 57

   35 expression: expression ADDOP . term

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor  go to state 42
    term    go to state 70


State 58

   19 output_stmt: OUTPUT '(' expression ')' . ';'

    ';'  shift, and go to state 71


State 59

   25 while_stmt: WHILE create_label $@5 '(' . boolexpr ')' $@6 stmt

    NOT   shift, and go to state 48
    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    boolexpr    go to state 72
    boolterm    go to state 50
    boolfactor  go to state 51
    factor      go to state 42
    term        go to state 43
    expression  go to state 52


State 60

   17 assignment_stmt: ID '=' expression ';' .

    $default  reduce using rule 17 (assignment_stmt)


State 61

   33 boolfactor: NOT '(' . boolexpr ')'

    NOT   shift, and go to state 48
    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    boolexpr    go to state 73
    boolterm    go to state 50
    boolfactor  go to state 51
    factor      go to state 42
    term        go to state 43
    expression  go to state 52


State 62

   29 boolexpr: boolexpr OR . boolterm

    NOT   shift, and go to state 48
    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    boolterm    go to state 74
    boolfactor  go to state 51
    factor      go to state 42
    term        go to state 43
    expression  go to state 52


State 63

   22 if_stmt: IF create_label '(' boolexpr ')' . $@3 stmt $@4 ELSE stmt

    $default  reduce using rule 20 ($@3)

    $@3  go to state 75


State 64

   31 boolterm: boolterm AND . boolfactor

    NOT   shift, and go to state 48
    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    boolfactor  go to state 76
    factor      go to state 42
    term        go to state 43
    expression  go to state 52


State 65

   34 boolfactor: expression RELOP . expression

    CAST  shift, and go to state 38
    ID    shift, and go to state 39
    NUM   shift, and go to state 40
    '('   shift, and go to state 41

    factor      go to state 42
    term        go to state 43
    expression  go to state 77


State 66

   18 input_stmt: INPUT '(' ID ')' ';' .

    $default  reduce using rule 18 (input_stmt)


State 67

   35 expression: expression . ADDOP term
   40 factor: CAST '(' expression . ')'

    ADDOP  shift, and go to state 57
    ')'    shift, and go to state 78


State 68

   39 factor: '(' expression ')' .

    $default  reduce using rule 39 (factor)


State 69

   37 term: term MULOP factor .

    $default  reduce using rule 37 (term)


State 70

   35 expression: expression ADDOP term .
   37 term: term . MULOP factor

    MULOP  shift, and go to state 56

    $default  reduce using rule 35 (expression)


State 71

   19 output_stmt: OUTPUT '(' expression ')' ';' .

    $default  reduce using rule 19 (output_stmt)


State 72

   25 while_stmt: WHILE create_label $@5 '(' boolexpr . ')' $@6 stmt
   29 boolexpr: boolexpr . OR boolterm

    OR   shift, and go to state 62
    ')'  shift, and go to state 79


State 73

   29 boolexpr: boolexpr . OR boolterm
   33 boolfactor: NOT '(' boolexpr . ')'

    OR   shift, and go to state 62
    ')'  shift, and go to state 80


State 74

   29 boolexpr: boolexpr OR boolterm .
   31 boolterm: boolterm . AND boolfactor

    AND  shift, and go to state 64

    $default  reduce using rule 29 (boolexpr)


State 75

   22 if_stmt: IF create_label '(' boolexpr ')' $@3 . stmt $@4 ELSE stmt

    IF      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    WHILE   shift, and go to state 15
    ID      shift, and go to state 16
    '{'     shift, and go to state 5

    stmt             go to state 81
    assignment_stmt  go to state 19
    input_stmt       go to state 20
    output_stmt      go to state 21
    if_stmt          go to state 22
    while_stmt       go to state 23
    stmt_block       go to state 24


State 76

   31 boolterm: boolterm AND boolfactor .

    $default  reduce using rule 31 (boolterm)


State 77

   34 boolfactor: expression RELOP expression .
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 57

    $default  reduce using rule 34 (boolfactor)


State 78

   40 factor: CAST '(' expression ')' .

    $default  reduce using rule 40 (factor)


State 79

   25 while_stmt: WHILE create_label $@5 '(' boolexpr ')' . $@6 stmt

    $default  reduce using rule 24 ($@6)

    $@6  go to state 82


State 80

   33 boolfactor: NOT '(' boolexpr ')' .

    $default  reduce using rule 33 (boolfactor)


State 81

   22 if_stmt: IF create_label '(' boolexpr ')' $@3 stmt . $@4 ELSE stmt

    $default  reduce using rule 21 ($@4)

    $@4  go to state 83


State 82

   25 while_stmt: WHILE create_label $@5 '(' boolexpr ')' $@6 . stmt

    IF      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    WHILE   shift, and go to state 15
    ID      shift, and go to state 16
    '{'     shift, and go to state 5

    stmt             go to state 84
    assignment_stmt  go to state 19
    input_stmt       go to state 20
    output_stmt      go to state 21
    if_stmt          go to state 22
    while_stmt       go to state 23
    stmt_block       go to state 24


State 83

   22 if_stmt: IF create_label '(' boolexpr ')' $@3 stmt $@4 . ELSE stmt

    ELSE  shift, and go to state 85


State 84

   25 while_stmt: WHILE create_label $@5 '(' boolexpr ')' $@6 stmt .

    $default  reduce using rule 25 (while_stmt)


State 85

   22 if_stmt: IF create_label '(' boolexpr ')' $@3 stmt $@4 ELSE . stmt

    IF      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    WHILE   shift, and go to state 15
    ID      shift, and go to state 16
    '{'     shift, and go to state 5

    stmt             go to state 86
    assignment_stmt  go to state 19
    input_stmt       go to state 20
    output_stmt      go to state 21
    if_stmt          go to state 22
    while_stmt       go to state 23
    stmt_block       go to state 24


State 86

   22 if_stmt: IF create_label '(' boolexpr ')' $@3 stmt $@4 ELSE stmt .

    $default  reduce using rule 22 (if_stmt)
